--- a/.github/workflows/jnipp.yml
+++ b/.github/workflows/jnipp.yml
@@ -23,7 +23,10 @@ jobs:
         run: .\x64\Debug\tests.exe
   macos:
     name: macos
-    runs-on: macos-latest
+    strategy:
+      matrix:
+        os: [macos-latest, macos-14]
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
         name: Checkout project
