--- a/.github/workflows/jnipp.yml
+++ b/.github/workflows/jnipp.yml
@@ -24,17 +24,17 @@ jobs:
   macos:
     name: macos
     strategy:
+      fail-fast: false
       matrix:
-        os: [macos-latest, macos-14]
+        os: [macos-12, macos-14]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
         name: Checkout project
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v4
         with:
           java-version: 1.8
           java-package: jdk
-          architecture: x64
       - name: Build
         run: make
       - name: Test
