--- a/.github/workflows/jnipp.yml
+++ b/.github/workflows/jnipp.yml
@@ -35,6 +35,7 @@ jobs:
         with:
           java-version: 1.8
           java-package: jdk
+          distribution: adoptjdk
       - name: Build
         run: make
       - name: Test
