--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ target_include_directories(
   jnipp
   PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
   PRIVATE ${JNI_INCLUDE_DIRS})
+target_compile_definitions(jnipp PUBLIC -DJVM_PATH="${JNI_JVM_LIBRARY}")
 target_link_libraries(jnipp PUBLIC ${CMAKE_DL_LIBS})
 
 add_subdirectory(tests)
