--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ target_include_directories(
   jnipp
   PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
   PRIVATE ${JNI_INCLUDE_DIRS})
-target_compile_definitions(jnipp PUBLIC -DJVM_PATH=$<LINK_LIBRARIES:JNI::JVM>)
+target_compile_definitions(jnipp PUBLIC -DJVM_PATH=$<TARGET_FILE:JNI::JVM>)
 target_compile_options(jnipp PUBLIC -ldl -std=c++11 -Wall -g)
 target_link_libraries(jnipp PUBLIC ${CMAKE_DL_LIBS})
 
